test/seq/cmdlists/invalid_cmd2.err
SyntaxError: Expecting command name
Line: 3, Column: 1
+123
^
